# rust_hash_tool

./: Cargo.toml  README.md  convert_icon.py
src/: crypto.rs  main.rs
